Refactor dans Util.js des fonctions password & fix Games/Users.js
